Fixed problem with header shifting when scrolling

--- a/src/styles.css
+++ b/src/styles.css
@@ -149,7 +149,7 @@ input[type="text"] {
   min-height: 28px;
   margin-bottom: 10px;
   position: sticky;
-  top: -3px;
+  top: 0;
   padding-top: 6px;
   z-index: 1;
   background: var(--bg);
